# prefect_demo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
prefect_demo/: __main__.py
prefect_demo/flows/: e01_my_first_flow.py
tests/: test_flow_e01.py
