[tool.poetry]
name = "prefect-demo"
version = "0.1.0"
description = ""
authors = ["Tuan Le Khac <tuan.lekhac0905@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
