[tool.poetry]
name = "prefect-demo"
version = "0.1.0"
description = ""
authors = ["Tuan Le Khac <tuan.lekhac0905@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
mypy = "^1.11.0"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
prefect = "^2.19.8"
asyncio = "^3.4.3"
pre-commit = "^3.7.1"

# https://docs.pytest.org/en/stable/how-to/capture-warnings.html to ignore warnings
# pyproject.toml
[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
